update user and deployment and documentation left

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,11 +13,15 @@ input[type="file"]{
 *{
     font-family: myFirstFont;
 }
-.header_link{
+.header_link, .header_link_main{
     color: black;
 }
 .header_link:hover{
     text-decoration: underline;
+    color: black;
+}
+.header_link_main:hover{
+    text-decoration: none;
     color: black;
 }
 .formcomponent{
