profile route changed

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -73,8 +73,8 @@
                     <td>A route for user to reset password</td>
                 </tr><tr>
                     <td>POST</td>
-                    <td>/api/upload</td>
-                    <td><li>headers : Authorization : Bearer token </li><li> body : Form Data('application',image)</li></td>
+                    <td>/api/profile/upload</td>
+                    <td><li>headers : Authorization : Bearer token </li><li> body : JSON{url}</li></td>
                     <td>Private</td>
                     <td>A route for user to upload/change profile pic</td>
                 </tr><tr>
