--- a/backend/templates/contactEmail.handlebars
+++ b/backend/templates/contactEmail.handlebars
@@ -13,17 +13,19 @@
                 text-align:left;
                 font-family: myFirstFont;
             }
-            p{
-                font-size: 13px;
-            }
-            a{
-                text-decoration: underline;
-                font-size: 14px;
-            }
         </style>
     </head>
 <body>
     <h2>Hello {{name}}!</h2>
-    <h3>This is the otp for recovering your password : {{otp}}</h3>
+    <h3>This is a to acknowledge that we have recieved your message - </h3>
+    <blockquote class='p-2' style="font-size:15px; border:1px solid whitesmoke; width:max-content; padding:1rem;">
+        {{message}}
+    </blockquote>
+    <div style="font-size:15px;">
+        We will contact you back soon.
+    </div>    
+    <div style="font-size:15px;">
+        Till then keep developing! {...} 
+    </div>
 </body>
 </html>
