--- a/backend/templates/welcomeEmail.handlebars
+++ b/backend/templates/welcomeEmail.handlebars
@@ -3,22 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css' integrity='sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l' crossorigin='anonymous'/>
         <style>
+            @font-face {
+                font-family: myFirstFont;
+                src: url('./Inter-Regular.ttf');
+            }
             body{
                 text-align:left;
+                font-family: myFirstFont;
             }
             p{
                 font-size: 13px;
             }
             a{
-                color: white;
                 text-decoration: underline;
+                font-size: 14px;
             }
         </style>
     </head>
     <body>
         <h2>Hello {{name}}!</h2>
-        <h4>This is a MERN starter boilerplate with following features : </h4>
+        <h3>This is a MERN starter boilerplate with following features : </h3>
         <ul>
             <li>Authentication</li>
             <li>Authorization</li>
@@ -26,13 +32,13 @@
             <li>Forgot password recovery</li>
             <li>State management using redux</li>
         </ul>
-        <h5>Do give feedback at : </h5>
-        <p>
+        <div class='d-flex align-items-center'>
+            <h3 class='mr-2'>Do give feedback at : </h3>
             <a href='mailto:adityaubale63@gmail.com'>adityaubale63@gmail.com</a>
-        </p>
-        <h5>Visit github at : </h5>
-        <p>
+        </div>
+        <div class='d-flex align-items-center'>
+            <h3 class='mr-2'>Visit github at : </h3>
             <a href='https://github.com/aditya25022001/mern-boilerplate' rel='noopener noreferer' target='_blank'>mern-boilerplate</a>
-        </p>
+        </div>
     </body>
 </html>
