--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,11 @@
     font-family: myFirstFont;
     src: url('./Inter-Regular.ttf');
 }
+@keyframes wave {
+    0% {transform:rotateZ(13deg);}
+    50% {transform:rotateZ(0deg);}
+    100% {transform:rotateZ(13deg);}
+}
 :root{
     --warning:#FFD166;
     --error:#EE6352;
@@ -12,6 +17,9 @@ input[type="file"]{
   }
 *{
     font-family: myFirstFont;
+}
+.wave{
+    animation: wave 1s infinite;
 }
 .header_link, .header_link_main{
     color: black;
@@ -36,7 +44,7 @@ input[type="file"]{
 .form-control:focus{
     border: 1.2px solid #9c9b9b;
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 500px) {
     *::-webkit-scrollbar{
         width:7px;
         height:5px;
