backend template changed

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -96,6 +96,13 @@
                     <td>Admin</td>
                     <td>A route for admin to update a user's admin rights</td>
                 </tr>
+                <tr>
+                    <td>POST</td>
+                    <td>/api/contact</td>
+                    <td>body : JSON{name, email, message}</td>
+                    <td>Public</td>
+                    <td>A route for user to make contact with the admin or project team</td>
+                </tr>
             </tbody>
         </table>
         <script>
